Fixed spinners so they dont flicker

--- a/src/material.scss
+++ b/src/material.scss
@@ -10,10 +10,10 @@
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue.
 $candy-app-primary: mat-palette($mat-deep-orange);
-$candy-app-accent:  mat-palette($mat-green);
+$candy-app-accent:  mat-palette($mat-blue);
 
 // The warn palette is optional (defaults to red).
-$candy-app-warn:    mat-palette($mat-red);
+$candy-app-warn:    mat-palette($mat-green);
 
 // Create the theme object (a Sass map containing all of the palettes).
 $candy-app-theme: mat-dark-theme($candy-app-primary, $candy-app-accent, $candy-app-warn);
